inventory varibles changes

--- a/inventory.ini
+++ b/inventory.ini
@@ -32,5 +32,8 @@ payment.mvaws.online
 [dispatch]
 dispatch.mvaws.online
 
-[all:vars]
-ansible_password=DevOps321
+[localhost]
+localhost
+
+; [all:vars]
+; ansible_password=DevOps321
