--- a/roles/common/tasks/app-setup.yaml
+++ b/roles/common/tasks/app-setup.yaml
@@ -33,4 +33,4 @@
   ansible.builtin.unarchive:
     src: "/tmp/{{component}}-{{app_version}}.zip"
     dest: /app
-    remote_src: yes remote_src: yes
+    remote_src: yes
